apps/gwin-gw/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: divanchik-gateway
  namespace: gwin
  annotations:
    gwin.yandex.cloud/securityGroups: enpkmup0tbg4ohp13lgn
spec:
  gatewayClassName: gwin-default
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    hostname: "*.divanchik.m1xxos.online"
    allowedRoutes:
      namespaces:
        from: All
  - name: https
    protocol: HTTPS
    port: 443
    hostname: "*.divanchik.m1xxos.online"
    allowedRoutes:
      namespaces:
        from: All
    tls:
      certificateRefs:
      - group: gwin.yandex.cloud
        kind: YCCertificate
        name: divanchik-certificate
  addresses:
  - type: gwin.yandex.cloud/autoIPv4
    value: auto
